Fixed issue with rowImages not displaying correctly on mobile

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -75,7 +75,8 @@ image-container
 
 img
 {
-  width:30%; 
+  width:30%;
+  height:auto; 
   margin:10px; 
   align-self: center;
 }
@@ -190,7 +191,8 @@ h3
 
   img
   {
-  width:70%; 
+  width:70%;
+  max-height: 1080px;
   margin:10px; 
   align-self: center;
   }
